update vim script

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,23 +1,31 @@
 {
   "html.format.enable": true,
   "solargraph.formatting": true,
+  "solargraph.diagnostics": true,
   "solargraph.checkGemVersion": false,
-  "coc.preferences.formatOnSaveFiletypes": ["ruby", "javascript", "typescript", "javascriptreact"],
+  "coc.preferences.formatOnSaveFiletypes": ["javascript", "typescript", "javascriptreact", "typescriptreact", "go", "vue"],
   "typescript.suggest.enabled": true,
   "javascript.format.enabled": true,
   "javascript.format.semicolons": "insert",
+  "javascript.preferences.quoteStyle": "single",
   "eslint.enable": false,
   "typescript.preferences.quoteStyle": "single",
   "typescript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyBrackets": false,
   "typescript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyBraces": true,
+  "prettier.tabWidth": 2,
+  "prettier.singleQuote": true,
   "typescript.format.insertSpaceBeforeFunctionParenthesis": false,
   "typescript.suggest.completeFunctionCalls": false,
   "tsserver.enable": true,
-  "tsserver.enableJavascript": true,
+  "tsserver.enableJavascript": false,
   "diagnostic.refreshOnInsertMode": true,
   "suggest.numberSelect": false,
   "suggest.noselect": false,
   "suggest.enablePreview": true,
+  "emmet.includeLanguages": {"eelixir": "html", "vue": "html"},
+  "vetur.format.enable": true,
+  "tailwindCSS.emmetCompletions": true,
   "coc.preferences.extensionUpdateCheck": "weekly",
-  "list.source.files.excludePatterns": ["**/deps/**/*", "**/node_modules/**/*", "**/tmp/**/*"]
+  "list.source.files.excludePatterns": ["**/deps/**/*", "**/node_modules/**/*", "**/tmp/**/*"],
+  "smartf.timeout": 5000
 }
